Fixed some overflow-issues, but reintroduced jumping content

--- a/src/components/oneYearGraph/oneYearGraph.module.scss
+++ b/src/components/oneYearGraph/oneYearGraph.module.scss
@@ -4,7 +4,7 @@
 
 .oneYearGraph {
   background: white;
-  margin-bottom: -75px;
+  margin-bottom: -50px;
   height: 100%;
   width: 100%;
 
