--- a/src/templates/productPage/productPage.module.scss
+++ b/src/templates/productPage/productPage.module.scss
@@ -22,7 +22,6 @@
       position: fixed;
       top: 0;
       width: 100%;
-      height: 100px;
       background-color: white;
       box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5);
     }
@@ -130,28 +129,6 @@
       min-width: 600px;
       width: 40%;
       line-height: 1.5em;
-    }
-
-    .product {
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: space-around;
-      height: 1000px;
-      width: 100%;
-
-      .textContainer {
-        width: 50%;
-      }
-
-      .imageContainer {
-        width: 50%;
-
-        img {
-          height: 80%;
-          width: 100%;
-          object-fit: contain;
-        }
-      }
     }
   }
 
